--- a/front-end/package.json
+++ b/front-end/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@types/react-redux-toastr": "^7.6.2",
     "prettier": "^3.0.3"
   }
 }
