--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/react-redux-toastr": "^7.6.2",
+    "@types/redux-persist": "^4.3.1",
     "prettier": "^3.0.3"
   }
 }
